; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-form.c_pdf_set_field_value.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-form.c_pdf_set_field_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pdf_set_field_value(i32* %0, %struct.TYPE_6__* %1, i32* %2, i8* %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_6__*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store %struct.TYPE_6__* %1, %struct.TYPE_6__** %7, align 8
  store i32* %2, i32** %8, align 8
  store i8* %3, i8** %9, align 8
  store i32 %4, i32* %10, align 4
  store i32 0, i32* %11, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = load i32*, i32** %8, align 8
  %14 = call i32 @pdf_field_type(i32* %12, i32* %13)
  switch i32 %14, label %28 [
    i32 128, label %15
    i32 131, label %15
    i32 130, label %15
    i32 132, label %22
    i32 129, label %22
  ]

15:                                               ; preds = %5, %5, %5
  %16 = load i32*, i32** %6, align 8
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %18 = load i32*, i32** %8, align 8
  %19 = load i8*, i8** %9, align 8
  %20 = load i32, i32* %10, align 4
  %21 = call i32 @set_validated_field_value(i32* %16, %struct.TYPE_6__* %17, i32* %18, i8* %19, i32 %20)
  store i32 %21, i32* %11, align 4
  br label %34

22:                                               ; preds = %5, %5
  %23 = load i32*, i32** %6, align 8
  %24 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %25 = load i32*, i32** %8, align 8
  %26 = load i8*, i8** %9, align 8
  %27 = call i32 @set_checkbox_value(i32* %23, %struct.TYPE_6__* %24, i32* %25, i8* %26)
  store i32 %27, i32* %11, align 4
  br label %34

28:                                               ; preds = %5
  %29 = load i32*, i32** %6, align 8
  %30 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %31 = load i32*, i32** %8, align 8
  %32 = load i8*, i8** %9, align 8
  %33 = call i32 @update_field_value(i32* %29, %struct.TYPE_6__* %30, i32* %31, i8* %32)
  store i32 1, i32* %11, align 4
  br label %34

34:                                               ; preds = %28, %22, %15
  %35 = load i32, i32* %10, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %40, label %37

37:                                               ; preds = %34
  %38 = load %struct.TYPE_6__*, %struct.TYPE_6__** %7, align 8
  %39 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %38, i32 0, i32 0
  store i32 1, i32* %39, align 4
  br label %40

40:                                               ; preds = %37, %34
  %41 = load i32, i32* %11, align 4
  ret i32 %41
}

declare dso_local i32 @pdf_field_type(i32*, i32*) #1

declare dso_local i32 @set_validated_field_value(i32*, %struct.TYPE_6__*, i32*, i8*, i32) #1

declare dso_local i32 @set_checkbox_value(i32*, %struct.TYPE_6__*, i32*, i8*) #1

declare dso_local i32 @update_field_value(i32*, %struct.TYPE_6__*, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
